# chipmunk-dashboard

./: .gitignore  AGENTS.md  AI_AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  PLAN.md  README.md  environment.yml  pyproject.toml  validate_env.py
.agents/skills/add-plot/: SKILL.md
.claude/skills/add-plot/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/copilot/: setup-steps.yml
.github/workflows/: ci.yml
notebooks/: ingest_subjects.ipynb  perf_summaries.ipynb
src/: perf_summaries_script.py
src/chipmunk_dashboard/: app.py  cli.py  data.py
src/chipmunk_dashboard/assets/: dashboard.css
tests/: playwright_layout_hashes.json  test_app.py  test_cli.py  test_data.py  test_integration.py  test_playwright_ui.py
