[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "chipmunk-dashboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dash",
    "plotly<7",
    "pandas",
    "numpy",
    "labdata>=0.0.22",
    # Newer setuptools releases break the real labdata/datajoint import path.
    "setuptools==79.0.1",
]

[project.scripts]
chipmunk-dashboard = "chipmunk_dashboard.cli:main"

[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.7.1",
    "playwright>=1.55.0",
    "pillow>=12.0.0",
    "pygments>=2.20.0",
]
